# Enfusion-Unpacker

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  enfusion_unpacker.ini  settings.json  vcpkg.json
include/enfusion/: addon_extractor.hpp  compression.hpp  dds_loader.hpp  edds_converter.hpp  files.hpp  logging.hpp  manifest.hpp  mesh_converter.hpp  pak_index.hpp  pak_manager.hpp  pak_reader.hpp  path_utils.hpp  rdb_parser.hpp  result.hpp  texture_utils.hpp  types.hpp  xob_material_ranges.hpp  xob_parser.hpp  xob_types.hpp  xob_vertex_layout.hpp  xob_vertex_parser.hpp
include/gui/: addon_browser.hpp  app.hpp  export_dialog.hpp  file_browser.hpp  main_window.hpp  model_viewer.hpp  settings_dialog.hpp  text_viewer.hpp  texture_viewer.hpp  theme.hpp  widgets.hpp
include/renderer/: camera.hpp  mesh_renderer.hpp  shader.hpp  texture_renderer.hpp
resources/: app.rc
src/: main.cpp
src/converters/: addon_extractor.cpp  mesh_converter.cpp
src/core/: manifest.cpp  pak_index.cpp  pak_manager.cpp  pak_reader.cpp  rdb_parser.cpp
src/formats/: dds_loader.cpp  edds_converter.cpp  xob_material_ranges.cpp  xob_parser.cpp  xob_vertex_layout.cpp  xob_vertex_parser.cpp
src/gui/: addon_browser.cpp  app.cpp  export_dialog.cpp  file_browser.cpp  main_window.cpp  model_viewer.cpp  settings_dialog.cpp  text_viewer.cpp  texture_viewer.cpp  theme.cpp  widgets.cpp
src/renderer/: camera.cpp  mesh_renderer.cpp  shader.cpp  texture_renderer.cpp
src/utils/: compression.cpp  files.cpp
